--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,12 @@ RewriteEngine On
 
 RewriteCond %{REQUEST_METHOD} ^GET$
 RewriteRule ^list$ controllers/list.php?action=index
+
+RewriteCond %{REQUEST_METHOD} ^POST$
+RewriteRule ^list$ controllers/list.php?action=post
+
+RewriteCond %{REQUEST_METHOD} ^PUT$
+RewriteRule ^list/([0-9]+)$ controllers/list.php?action=update&id=$1
+
+RewriteCond %{REQUEST_METHOD} ^DELETE$
+RewriteRule ^list/([0-9]+)$ controllers/list.php?action=delete&id=$1
