--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
 RewriteEngine On
 
+
 RewriteCond %{REQUEST_METHOD} ^GET$
 RewriteRule ^list$ controllers/list.php?action=index
 
@@ -12,8 +13,16 @@ RewriteRule ^list/([0-9]+)$ controllers/list.php?action=update&id=$1
 RewriteCond %{REQUEST_METHOD} ^DELETE$
 RewriteRule ^list/([0-9]+)$ controllers/list.php?action=delete&id=$1
 
+
+
 RewriteCond %{REQUEST_METHOD} ^GET$
 RewriteRule ^refrigerator$ controllers/refrigerator.php?action=index
 
 RewriteCond %{REQUEST_METHOD} ^POST$
 RewriteRule ^refrigerator$ controllers/refrigerator.php?action=post
+
+RewriteCond %{REQUEST_METHOD} ^PUT$
+RewriteRule ^refrigerator/([0-9]+)$ controllers/refrigerator.php?action=update&id=$1
+
+RewriteCond %{REQUEST_METHOD} ^DELETE$
+RewriteRule ^refrigerator/([0-9]+)$ controllers/refrigerator.php?action=delete&id=$1
