--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
+
+
+Header add Access-Control-Allow-Origin "*"
+Header add Access-Control-Allow-Methods: "GET, POST, OPTIONS, DELETE, PUT"
+Header add Access-Control-Allow-Headers: "Content-Type, Accept"
+Header add Content-Type: "application/json"
+
 RewriteEngine On
 
 
